# carp

./: .gitignore  CMakeLists.txt  Makefile  TODO.md
include/: player.h
include/carp/: component.h  entity.h  game.h  globals.h  graphics.h  input.h  scene.h  sprite_manager.h
include/carp/components/: animator.h  sprite.h
src/: main.cpp  player.cpp
src/carp/: component.cpp  entity.cpp  game.cpp  graphics.cpp  input.cpp  scene.cpp  sprite_manager.cpp  timer.cpp  tinyxml2.cpp
src/carp/component/: sprite.cpp
src/carp/components/: animator.cpp  sprite.cpp
